feat: update & delete with new swegger generate
